QCocoaDrag: Fix text, url and image preview pixmap while dragging.

OSX was missing text, url and image preview while dragging causing the
drag operation to show a small dashed box around the mouse cursor.

Task-number: QTBUG-33824
Change-Id: I8d0acd0d6a48b7cb29ad2faba8b9ecb9cdf2a5ab
Reviewed-by: Morten Johan Sørvig <morten.sorvig@theqtcompany.com>
Reviewed-by: Shawn Rutledge <shawn.rutledge@digia.com>